# MeshConsole

./: .gitignore  CHANGELOG.md  README.md  config.example.ini  conftest.py  install.sh  meshconsole.py  pyproject.toml  requirements.txt  wsgi.py
scripts/: analyze_links.py  remove_contact.py
src/meshconsole/: __init__.py  autodetect.py  cli.py  config.py  core.py  database.py  models.py  web.py
src/meshconsole/backend/: __init__.py  base.py  meshcore.py  meshtastic.py
src/meshconsole/templates/: index.html
templates/: index.html
tests/: __init__.py  conftest.py  test_database.py  test_meshcore_backend.py  test_models.py  test_route_learning.py
