[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshconsole"
version = "3.2.2"
description = "A powerful CLI and web interface for Meshtastic and MeshCore mesh networking devices"
readme = "README.md"
license = "MIT"
authors = [
    { name = "M9WAV", email = "m9wav@hackers.uk" }
]
keywords = ["meshtastic", "meshcore", "mesh", "networking", "lora", "radio", "ham", "amateur-radio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Communications :: Ham Radio",
]
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.0.0",
    "Flask-CORS>=4.0.0",
    "pypubsub>=4.0.0",
    "pyserial>=3.5",
    "requests>=2.25.0",
]

[project.optional-dependencies]
meshtastic = ["meshtastic>=2.0.0", "protobuf>=3.20.0"]
meshcore = ["meshcore>=0.1.0"]
all = ["meshtastic>=2.0.0", "protobuf>=3.20.0", "meshcore>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/m9wav/MeshConsole"
Repository = "https://github.com/m9wav/MeshConsole"
Issues = "https://github.com/m9wav/MeshConsole/issues"

[project.scripts]
meshconsole = "meshconsole.core:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Use importlib mode to avoid sys.path manipulation that would cause
# the standalone meshconsole.py to shadow the installed package.
# Ensure the src layout package is found before the standalone meshconsole.py
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/meshconsole",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meshconsole"]

[tool.hatch.build]
include = [
    "src/meshconsole/**/*.py",
    "src/meshconsole/templates/**",
]
